# VersaAssistant-Demo

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  RoboMaster电控组内部串口通信协议.md  readme.md
Document/: readme.md
QtAdvancedDocking/: .qmake.stash  CMakeLists.txt  DockManager.cpp  DockWidget.cpp  DockWidgetTab.cpp  Makefile  Makefile.Debug  Makefile.Release  README.md  ads_globals.h  object_script.qtadvanceddocking.Debug  object_script.qtadvanceddocking.Release  src.pro
QtMaterial/: CMakeLists.txt  qtmaterialappbar.cpp  qtmaterialappbar.h  qtmaterialappbar_p.h  qtmaterialautocomplete.cpp  qtmaterialautocomplete.h  qtmaterialautocomplete_internal.cpp  qtmaterialautocomplete_internal.h  qtmaterialautocomplete_p.h  qtmaterialavatar.cpp  qtmaterialavatar.h  qtmaterialavatar_p.h  qtmaterialbadge.cpp  qtmaterialbadge.h  qtmaterialbadge_p.h  qtmaterialcheckbox.cpp  qtmaterialcheckbox.h  qtmaterialcheckbox_p.h  qtmaterialcircularprogress.cpp  qtmaterialcircularprogress.h  qtmaterialcircularprogress_internal.cpp  qtmaterialcircularprogress_internal.h  qtmaterialcircularprogress_p.h  qtmaterialdialog.cpp  qtmaterialdialog.h  qtmaterialdialog_internal.cpp  qtmaterialdialog_internal.h  qtmaterialdialog_p.h  qtmaterialdrawer.cpp  qtmaterialdrawer.h  qtmaterialdrawer_internal.cpp  qtmaterialdrawer_internal.h  qtmaterialdrawer_p.h  qtmaterialfab.cpp  qtmaterialfab.h  qtmaterialfab_p.h  qtmaterialflatbutton.cpp  qtmaterialflatbutton.h  qtmaterialflatbutton_internal.cpp  qtmaterialflatbutton_internal.h  (+47 more)
QtMaterial/lib/: qtmaterialcheckable.cpp  qtmaterialcheckable.h  qtmaterialcheckable_internal.cpp  qtmaterialcheckable_internal.h  qtmaterialcheckable_p.h  qtmaterialglobal.h  qtmaterialoverlaywidget.cpp  qtmaterialoverlaywidget.h  qtmaterialripple.cpp  qtmaterialripple.h  qtmaterialrippleoverlay.cpp  qtmaterialrippleoverlay.h  qtmaterialstatetransition.cpp  qtmaterialstatetransition.h  qtmaterialstatetransitionevent.h  qtmaterialstyle.cpp  qtmaterialstyle.h  qtmaterialstyle_p.h  qtmaterialtheme.cpp  qtmaterialtheme.h  qtmaterialtheme_p.h
VersaAssistant/: .mxproject  CMakeLists.txt  VersaAssistant.ioc  VersaDockWidget.cpp  VersaDockWidget.h  VersaWidget.cpp  VersaWidget.h  appicon.rc  main.cpp
VersaAssistant/Core/Inc/: main.h  stm32g4xx_it.h
VersaAssistant/Core/Src/: main.c
VersaAssistant/Frameless/: QDrawShadowHelper.cpp  QDrawShadowHelper.h  QFramelessDialog.cpp  QFramelessDialog.h  QFramelessHelper.cpp  QFramelessHelper.h  QFramelessMainWindow.cpp  QFramelessMainWindow.h  QFramelessWidget.cpp  QFramelessWidget.h
VersaAssistant/MDK-ARM/: VersaAssistant.uvguix.vseasky  VersaAssistant.uvoptx  VersaAssistant.uvprojx  startup_stm32g474xx.lst
VersaAssistant/MDK-ARM/RTE/_VersaAssistant/: RTE_Components.h
VersaAssistant/MDK-ARM/VersaAssistant/: VersaAssistant.axf  VersaAssistant.build_log.htm  VersaAssistant.htm  VersaAssistant.map  VersaAssistant_VersaAssistant.dep  bsp_crc16.crf  bsp_crc8.crf  main.crf  stm32g4xx_hal.crf  stm32g4xx_hal_cortex.crf  stm32g4xx_hal_dma.crf  stm32g4xx_hal_exti.crf  stm32g4xx_hal_flash_ex.crf  stm32g4xx_hal_flash_ramfunc.crf  stm32g4xx_hal_pcd.crf  stm32g4xx_it.crf  usb_glue_st.s
VersaAssistant/Peripheral/: bsp_systick.h  bsp_versaassistant.c  bsp_versaassistant.h
VersaAssistant/VersaCommunication/: VersaPhysicalCom.cpp  VersaPhysicalCom.h
VersaAssistant/VersaCommunication/VersaInternet/: VersaTcpServer.cpp  VersaTcpServer.h  VersaTcpSocket.cpp  VersaTcpSocket.h  VersaUdpSocket.cpp  VersaUdpSocket.h
VersaAssistant/VersaCommunication/VersaLibusb/: VersaLibusb.cpp  VersaLibusb.h
VersaAssistant/VersaCommunication/VersaProtocol/Protocol/: VersaAssistantProtocol.md  bsp_protocol.cpp  bsp_protocol.h
VersaAssistant/VersaCommunication/VersaProtocol/Protocol/crc/: bsp_crc16.h  bsp_crc8.cpp  bsp_crc8.h
VersaAssistant/VersaCommunication/VersaSerial/: VersaSerialPort.cpp  VersaSerialPort.h  VersaSerialPortStruct.cpp  VersaSerialPortStruct.h
VersaAssistant/VersaCommunication/libusb-1.0.26-rc1-binaries/: README
VersaAssistant/VersaCommunication/libusb-1.0.26-rc1-binaries/VS2015-Win32/dll/: libusb-1.0.exp  libusb-1.0.iobj  libusb-1.0.ipdb
VersaAssistant/VersaCommunication/libusb-1.0.26-rc1-binaries/VS2015-Win32/dll/libusb-1.0 (dll)/: libusb-1.0.res
VersaAssistant/VersaCommunication/libusb-1.0.26-rc1-binaries/VS2015-x64/dll/: libusb-1.0.exp  libusb-1.0.iobj  libusb-1.0.ipdb
VersaAssistant/VersaCommunication/libusb-1.0.26-rc1-binaries/libusb-MinGW-Win32/lib/pkgconfig/: libusb-1.0.pc
VersaAssistant/VersaOpenGL/: CMakeLists.txt  VersaOpenGLModel.cpp  VersaOpenGLModel.h  VersaOpenGLWidget.cpp  VersaOpenGLWidget.h  VersaRobotWidget.cpp  VersaRobotWidget.h  VersaScene.h  ads_fragment.frag  ads_fragment.vert  es_ads_fragment.frag  es_ads_fragment.vert
VersaAssistant/VersaOpenGL/lib/include/assimp/: config.h.in
VersaAssistant/VersaOpenGL/resources/model/: untitled.mtl
VersaAssistant/VersaQCustomplot/: GPL.txt  VersaQCustomPlot.cpp  VersaQCustomPlot.h  VersaQCustomPlotTracer.cpp  VersaQCustomPlotTracer.h  qcustomplot.cpp
VersaAssistant/VersaWidget/: ImageSvgLoad.cpp  ImageSvgLoad.h  VersaAboutApp.cpp  VersaAboutApp.h  VersaAppBar.cpp  VersaAppBar.h  VersaConfig.cpp  VersaConfig.h  VersaDataControl.cpp  VersaDataControl.h  VersaLicenseWidget.cpp  VersaLicenseWidget.h  VersaMessageBox.cpp  VersaMessageBox.h  VersaMultSendWidget.cpp  VersaMultSendWidget.h  VersaNormalSendWidget.cpp  VersaNormalSendWidget.h  VersaProtocolWidget.cpp  VersaProtocolWidget.h  VersaQColorWidget.cpp  VersaQColorWidget.h  VersaQuickWidget.cpp  VersaQuickWidget.h  VersaReceiveWidget.cpp  VersaReceiveWidget.h  VersaSideWidget.cpp  VersaSideWidget.h  VersaStateBar.cpp  VersaStateBar.h  VersaStyle.qrc  VersaStyleLight.qss  VersaStyleLightDockAdd.qss  VersaTabBar.cpp  VersaTabBar.h  statement.txt
VersaAssistant/VersaWidget/Icon/: ByteDance IconPark.url  IconPark.qrc  MingCute Icon .url  MingCute.qrc  qt_for_qrc.py
VersaAssistant/VersaWidget/font/: JetBrainsMono.qrc
VersaAssistant/models/: DJI Matrice 30T.mtl  DJIMatrice30T.mtl  dummy.mtl  model.json  untitled.mtl
(+121 files in other folders)
